Fix: menambahkan get history transaksi
